fixing zooming on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -119,7 +119,7 @@ $background-1: #27274d;
 .TodoWrapper {
   h1 {
     margin-bottom: 0.5rem;
-    font-size: 3.2em;
+    font-size: 2em;
     letter-spacing: 0.1em;
   }
   text-align: center;
